--- a/styles.css
+++ b/styles.css
@@ -73,7 +73,7 @@ header {
 }
 
 .ch0 {
-    background-color: #DC143C
+    background-color: #DC143C;
 }
 
 .ch0:hover {
@@ -82,14 +82,24 @@ header {
     background-color: #C41E3A
 }
 
+.ch0:disabled {
+    background-color: #DC143C;
+    transform: scale(1);
+}
+
 .ch1 {
-    background-color: #89CFF0
+    background-color: #89CFF0;
 }
 
 .ch1:hover {
     transform: scale(1.1);
     transition-delay: 150ms ease-in;
     background-color: deepskyblue
+}
+
+.ch1:disabled {
+    background-color: #89CFF0;
+    transform: scale(1);
 }
 
 .ch2 {
@@ -102,6 +112,11 @@ header {
     background-color: #FDDA0D
 }
 
+.ch2:disabled {
+    background-color: #FFEA00;
+    transform: scale(1);
+}
+
 .ch3 {
     background-color: #FAA0A0;
 }
@@ -110,6 +125,11 @@ header {
     transform: scale(1.1);
     transition-delay: 150ms ease-in;
     background-color: palevioletred
+}
+
+.ch3:disabled {
+    background-color: #FAA0A0;
+    transform: scale(1);
 }
 
 .ch4 {
@@ -122,16 +142,27 @@ header {
     background-color: #4CBB17;
 }
 
+.ch4:disabled {
+    background-color: #0BDA51;
+    transform: scale(1);
+}
+
 .ch5 {
     background-color: darkorchid;
     margin-bottom: 15px;
 }
 
 .ch5:hover {
-    margin-bottom: 15px;
     transform: scale(1.1);
     transition-delay: 150ms ease-in;
     background-color: purple;
+    margin-bottom: 15px;
+}
+
+.ch5:disabled {
+    background-color: darkorchid;
+    transform: scale(1);
+    margin-bottom: 15px;
 }
 
 button#newGame {
